delete button visibility fix

--- a/client/users/media/media.styl
+++ b/client/users/media/media.styl
@@ -13,17 +13,13 @@
   width 640px
   height 360px
 
-.user-mediapage.user-mediapage__m-deleted
+.user-mediapage.deleted
   .user-mediapage__delete
     display none
-  .user-mediapage__restore
-    display block
 
 .user-mediapage
   .user-mediapage__delete
     display block
-  .user-mediapage__restore
-    display none
 
 .user-mediapage__restore
   margin 0 auto
